2005-08-06  Kenji Hisazumi  <nel@soraneko.com>

	* cgi/fix-shebang.sh: 
	modified to generate a fastcgi script.

	* src/kahua-server.scm (kahua-add-hook!, kahua-delete-hook!): 
	added hook function, which is called whenever before and/or after
	processing a request to kahua applications.

2005-07-20  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in (cgi-error-page):
	modified to take only message argument.

	* cgi/kahua.cgi.in (cgi-error-proc):
	modified to log error detail.

	* cgi/kahua.cgi.in (main):
	modified to error handling to avoid anoying error output was 
	taken by Apache.

2005-07-14  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm, src/kahua/config.scm.in:
	Enabled to record kahua-spvr's process id in 
	work-directory/kahua-spvr.pid 
	

2005-07-14  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in:
	added SIGPIPE handling.
	
2005-07-12  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in:
	guraded IO

	* src/kahua-server.scm:
	- guarded read operation in accept-handler.
	- remove SIGPIPE handler.
	- log when errors without caught by signal handlers occur.
	
2005-07-11  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua-cgi.in: 
	log when SPVR-ERROR occured.

	* src/kahua-server.scm (run-srver):
	added guard in replying function for closing connection by client.
	
	* src/kahua/test/xml.scm:
	added coding directive.

2005-07-04  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/Makefile.in, src/Makefile.in, test/Makefile.in:
	  removed ces conversion process in building.

	* examples/lambdabooks.init.in, examples/*/*.kahua.in,
	  src/kahua/pdf/typeset.scm.in, test/*.kahua.in:
	  added coding ditective at top of file, and removing .in
	  extension from file name.

	* test/*.scm.in:
	  added coding ditective at top of file.

2005-06-30  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (sxml:attr->xml-bis attr): omit attributes
	  that have #f in their value.  This simplifies SXML constuction
	  a lot.
